@@ -67,8 +67,7 @@ register generate_update => sub {
     put '/api/'.$object_url.'/:id'  => sub {
         my $current_user = eval { get_user_by_session_id(permissions => $options{permissions}); };
         my $object = fetch_object($wing_object_type);
-        $object->can_edit($current_user, get_tracer());
-        $object->verify_posted_params(expanded_params($current_user), $current_user);
+        $object->verify_posted_params(expanded_params($current_user), $current_user, get_tracer());
         if (exists $options{extra_processing}) {
             $options{extra_processing}->($object, $current_user);
         }
@@ -85,11 +84,10 @@ register generate_create => sub {
         my $current_user = eval { get_user_by_session_id(permissions => $options{permissions}); };
         my $params = expanded_params($current_user);
         $object->verify_creation_params($params, $current_user);
-        $object->verify_posted_params($params, $current_user);
+        $object->verify_posted_params($params, $current_user, get_tracer());
         if (defined $options{extra_processing}) {
             $options{extra_processing}->($object, $current_user);
         }
-        $object->can_edit($current_user, get_tracer());
         $object->insert;
         return describe($object, current_user => $current_user);
     };
