@@ -4,6 +4,11 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2016-06-16
+ * Added privileged_params() to Wing::DB::Result.
+ * Added check_privilege option to wing_field in Wing::Role::Result::Field.
+ * The above two changes allow the creation of special privilege checks on a per-field basis. 
+
 2016-06-11
  * Added Wing::Role::Result::Warnings to give a standardized way of creating warnings in classes.
  * Change a couple fields that shouldn't be not null in the User role.
